Task-06: Tasks from PPT 17, 18, 19.

--- a/app/templates/scopeBindingsTemplate.html
+++ b/app/templates/scopeBindingsTemplate.html
@@ -1,1 +1,4 @@
-<p><strong>Data Value: </strong><input ng-model="local"></p>
+<p>
+    <strong>Data Value: </strong>
+    <input ng-model="local">
+</p>
