--- a/app/templates/scopeDemoFalseTemplate.html
+++ b/app/templates/scopeDemoFalseTemplate.html
@@ -1,1 +1,4 @@
-<div class='panel-body'>Name: <input type='text' ng-model='name'>{{name}}</div>
+<div class='panel-body'>
+    Name: <input type='text' ng-model='name'>
+    {{name}}
+</div>
